e2e/tests/all/snapshots/stepper_vertical_rest_desktop.snap
---
source: e2e/src/suite.rs
description: stepper_vertical at desktop (rest)
expression: tree
---
generic
  list
    listitem [level=1]
      button "Account" [current=step]
        StaticText "Account"
      region "Account"
        generic
          button "Continue to shipping"
            StaticText "Continue to shipping"
            generic
    listitem [level=1]
      generic
        StaticText "Shipping"
    listitem [level=1]
      generic
        StaticText "Review"
