e2e/tests/all/snapshots/stepper_vertical_second_mobile.snap
---
source: e2e/src/suite.rs
description: stepper_vertical at mobile (second)
expression: tree
---
generic
  list
    listitem [level=1]
      button "Account, Completed"
        StaticText "Account, Completed"
    listitem [level=1]
      button "Shipping" [current=step]
        StaticText "Shipping"
      region "Shipping"
        generic
          generic
            button "Continue to review"
              StaticText "Continue to review"
              generic
    listitem [level=1]
      generic
        StaticText "Review"
