e2e/tests/all/snapshots/switch_rest_desktop.snap
---
source: e2e/src/suite.rs
description: switch at desktop (rest)
expression: tree
---
switch "Notifications" [checked=false]
StaticText "About once a month."
StaticText "You can turn this off later."
StaticText "Changes 0"
switch "Accept terms" [checked=false] [invalid]
LabelText
  StaticText "Accept terms"
StaticText "Turn this on to continue."
switch "Wi-Fi" [checked=false]
switch "Locked" [checked]
switch "Disabled" [checked=false] [disabled]
switch "Bluetooth" [checked=false]
StaticText "Finds nearby devices."
switch "Uncontrolled" [checked=false]
